full-stack-terraform/security_group.tf
#ec2 security group 생성
resource "aws_security_group" "public" {
  name        = "public"
  description = "Allow Web, SSH inbound traffic"
  vpc_id      = aws_vpc.terraform-vpc.id

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}

#DB security group 생성
resource "aws_security_group" "private"{
    name        = "private"
    description = "Allow DB inbound traffic"
    vpc_id      = aws_vpc.terraform-vpc.id
    ingress {
        description = "mysql_aurora"
        from_port   = 3306
        to_port     = 3306
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"    # any protocol
        cidr_blocks = ["0.0.0.0/0"]
    }
}
